# open-feishu

./: .pre-commit-config.yaml  404.html  LICENSE.header  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: push.yaml
SUMMARY/: index.html
about/: index.html
about/index.en/: index.html
about/license/: index.html
about/license.en/: index.html
about/privacy/: index.html
about/privacy.en/: index.html
agent/: index.html
agent/adapters/: index.html
agent/app/: index.html
agent/approval/: index.html
agent/bundles/: index.html
agent/context/: index.html
agent/dispatch/: index.html
agent/integrity/: index.html
agent/llm/: index.html
agent/loop/: index.html
agent/oauth/: index.html
agent/payment_accounts/: index.html
agent/persistence/: index.html
agent/progress/: index.html
agent/prompting/: index.html
agent/registration/: index.html
agent/result/: index.html
agent/session/: index.html
agent/shared_files/: index.html
agent/streaming/: index.html
agent/summarization/: index.html
agent/toolkit/: index.html
agent/tools/: index.html
api/encrypt/: index.html
api/exceptions/: index.html
api/request/: index.html
approval/: index.html
approval/approval/: index.html
approval/builders/: index.html
approval/comments/: index.html
approval/definitions/: index.html
approval/files/: index.html
approval/instances/: index.html
approval/tasks/: index.html
attachments/: index.html
attachments/analysis/: index.html
attachments/extractor/: index.html
auth/: index.html
auth/app_access_token/: index.html
auth/credentials/: index.html
auth/oauth/: index.html
auth/oauth_state/: index.html
auth/tenant_access_token/: index.html
auth/tokens/: index.html
auth/user_tokens/: index.html
bitable/: index.html
bitable/apps/: index.html
bitable/bitable/: index.html
bitable/builders/: index.html
bitable/fields/: index.html
bitable/records/: index.html
bitable/tables/: index.html
board/: index.html
board/board/: index.html
board/whiteboards/: index.html
calendar/: index.html
cards/: index.html
client/: index.html
consts/: index.html
contact/: index.html
docs/: generate_reference.py  mkdocs.yml
docx/: index.html
drive/: index.html
en/: index.html
errors/: index.html
events/: index.html
examples/: README.md  ai_stream_card.py  oauth_login.py
exceptions/: index.html
feishu/: __init__.py  _envelope.py  _logging.py  _namespace.py  _sqlite.py  _transport.py  _url.py  client.py  consts.py  errors.py  exceptions.py  pagination.py  signature.py  types.py  variables.py
feishu/agent/: app.py  (+20 more)
gateway/: index.html
im/: index.html
integrations/: index.html
mail/: index.html
mcp/: index.html
meeting_room/: index.html
pagination/: index.html
plugins/: index.html
robot/: index.html
search/: search_index.json
sheets/: index.html
signature/: index.html
streaming/: index.html
task/: index.html
tests/: _fakes.py  conftest.py  test_agent_template.py  test_client.py  test_consts.py  test_errors.py  test_logging.py  test_pagination.py  test_public_api.py  test_signature.py  test_sqlite.py  test_transport.py
types/: index.html
utils/: index.html
variables/: index.html
vc/: index.html
wiki/: index.html
ws/: index.html
(+343 files in other folders)
