[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "open-feishu"
description = "Python SDK for Feishu / Lark"
readme = "README.md"
keywords = [
  "async",
  "bot",
  "feishu",
  "lark",
  "sdk",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
]
authors = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "chanfig>=0.0.102",
  "httpx",
  "pycryptodome",
  "starlette",
]
optional-dependencies.anthropic = [
  "anthropic",
]
optional-dependencies.attachments = [
  "openpyxl",
  "pillow",
  "pymupdf",
  "python-docx",
  "python-pptx",
]
optional-dependencies.mcp = [
  "mcp",
  "pymupdf",
]
optional-dependencies.openai = [
  "openai",
]
optional-dependencies.ws = [
  "websockets",
]
urls.documentation = "https://feishu.danling.org"
urls.homepage = "https://feishu.danling.org"
urls.repository = "https://github.com/ZhiyuanChen/open-feishu"
scripts.feishu-mcp = "feishu.mcp.server:main"

[tool.setuptools]
packages.find.include = [ "feishu*" ]

[tool.setuptools_scm]
write_to = "feishu/_version.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.pylint]
main.fail-under = 9.8
messages_control.disable = """
  E0012,
  E0401,
  R0201,
  R0801,
"""
reports.output-format = "colorized"
format.max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
overrides = [
  # Honest typing: every function in the shipped package must be fully annotated
  # (params + return). Scoped to feishu.* so test/example helpers stay untyped-friendly.
  # Enforced in CI via the pre-commit mypy hook.
  { module = [ "feishu", "feishu.*" ], disallow_untyped_defs = true, disallow_incomplete_defs = true, warn_unused_ignores = true },
]

[tool.pytest]
# Scope collection to the package (for --doctest-modules) and its tests, so
# doctest collection never wanders into examples/ or repo-root scratch files.
ini_options.testpaths = [ "feishu", "tests" ]
ini_options.addopts = "--cov=feishu --doctest-modules --ignore=docs --no-cov-on-fail"
# Match by message only (no hard class path): the deprecation's warning class moved/was
# removed across starlette versions (e.g. absent in 1.0.0), and referencing a missing
# class by dotted path aborts collection. Message-only stays robust across versions.
ini_options.filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
ini_options.asyncio_mode = "auto"

[tool.coverage]
run.branch = true
paths.source = [ "feishu" ]
report.fail_under = 60
report.show_missing = true
json.output = "coverage.json"
xml.output = "coverage.xml"
